# apk-raccoon

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  environment.yml  pyproject.toml  raccoon.sh  requirements.txt
data/: mastg_coverage.yaml  mitre_etag.txt  owasp_rule_mappings.yaml  severity_definitions.yaml
scripts/: update-checksums.sh
test_audit_dir/: manifest.csv  test_manifest.xml
test_audit_dir/30_scans/: manifest.csv
test_outputs/: dynamic.csv  grype.csv  webview_ssl.csv
tests/: __init__.py  test_advanced_scanners.py  test_new_scanners.py  test_patterns.py  test_scanner_utils.py
